Restructure and add grunt.

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
 
       var sqlite3 = require("sqlite3").verbose();
       var db = new sqlite3.Database(file);
-			var moment = require('moment');
+			//var moment = require('moment');
 
       document.write('<ul>');
       db.each("SELECT DiveId, StartTime, Duration, Mode, MaxDepth FROM Dive", function(err, row) {
-				row.Start = moment((row.StartTime - 621355968000000000)/10000);
-        document.write('<li>DiveId: ' + row.DiveId + ', StartTime: ' + row.Start.toString() + ', Duration: ' + row.Duration + ', Mode: ' + row.Mode + ', MaxDepth: ' + row.MaxDepth + '</li>');
+				//row.Start = moment((row.StartTime - 621355968000000000)/10000);
+        document.write('<li>DiveId: ' + row.DiveId + ', StartTime: ' + row.StartTime + ', Duration: ' + row.Duration + ', Mode: ' + row.Mode + ', MaxDepth: ' + row.MaxDepth + '</li>');
       });
       db.close();
       document.write('</ul>');
