--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   </head>
   <body ng-app="suuntoDMEditor" ng-controller="main">
     <h1>{{message}}</h1>
+    <h2>{{file}} - {{fileExists}}</h2>
     <!--<script>
       var fs = require("fs");
       //var file = '/Users/follesoe/.config/Suunto/Suunto\ DM4/1.1.14.3463/DM4.db';
