--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,10 @@
     <title>Suunto DM Editor</title>
   </head>
   <body ng-app="suuntoDMEditor" ng-controller="main">
-    <h1>{{message}}</h1>
-    <h2>{{file}} - {{fileExists}}</h2>
+    <h2>{{file}}</h2>
+    <ul>
+      <li ng-repeat="dive in dives">ID: {{dive.DiveId}}, Time: {{dive.StartTime}}, Depth: {{dive.MaxDepth}}, Duration: {{dive.Duration}}, Mode: {{dive.Mode}}</li>
+    </ul>
     <!--<script>
       var fs = require("fs");
       //var file = '/Users/follesoe/.config/Suunto/Suunto\ DM4/1.1.14.3463/DM4.db';
