--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,14 @@
     <label><input type="radio" ng-model="mode" value="2">2 gauge</label>
     <label><input type="radio" ng-model="mode" value="3">3 free</label>
     <textarea ng-model="note"></textarea>
-    <button ng-click="save()">Commit changes to {{selectedDives.length}} dives</button>
+    <button ng-click="save()">Commit changes</button>
     <button ng-click="backup()">Take backup</button>
-    <button ng-click="deselect()">Deselect all</button>
     <ul>
-      <li
-        ng-repeat="dive in dives"
-        selection-model
-        selection-model-mode="multiple-additive"
-        selection-model-selected-items="selectedDives">{{dive.StartTime}} ({{dive.MaxDepth}}m, {{dive.Duration}}s) - Mode: {{dive.Mode}}</li>
+      <li ng-repeat="dive in dives">{{dive.StartTime}} ({{dive.MaxDepth}}m, {{dive.Duration}}s) - Mode: {{dive.Mode}}</li>
     </ul>
-    <script src="lib/angular/angular.js"></script>
-    <script src="lib/angular-selection-model/dist/selection-model.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/services/dbpath.js"></script>
     <script src="scripts/controllers/main.js"></script>
   </body>
 </html>
