--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   </head>
   <body ng-app="suuntoDMEditor" ng-controller="main">
     <nav ng-show="fileExists">
+      <h1>Your Dives</h1>
+      <small>{{file}}</small>
       <ul>
         <li
           ng-click="select(dive)"
@@ -14,15 +16,17 @@
           ng-repeat="dive in dives">
           <img src="{{dive.Mode|modeicon}}" class="mode" />
           <span>{{dive.StartDate}}</span>
-          <span>{{dive.Duration}}</span>
-          <span>{{dive.MaxDepth|round}}</span>
+          <span class="light">{{dive.Duration}} H</span>
+          <span class="light">{{dive.MaxDepth|round}} M</span>
       </ul>
     </nav>
 
     <section ng-show="fileExists">
+
+      <h1>Selected Dive</h1>
+
       <h2 ng-hide="fileExists">Suunto Dive Manager not found on your computer.</h2>
 
-      <h2>{{file}}</h2>
       <label><input type="radio" ng-model="selectedDive.Mode" value="0">0 air</label>
       <label><input type="radio" ng-model="selectedDive.Mode" value="1">1 ean</label>
       <label><input type="radio" ng-model="selectedDive.Mode" value="2">2 gauge</label>
