Added computer as datafield
Also adds symmetry to the UX

--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,13 @@
             <h3>{{selectedDive.DiveNumberInSerie}}</h3>
           </div>
         </div>
+        <div class="dive-data">
+          <h2>Computer</h2>
+          <div>
+            <img src="images/computericon.png" />
+            <h3>{{selectedDive.Source}}</h3>
+          </div>
+        </div>
       </div>
 
       <button ng-click="save()" class="action">Save Changes</button>
