Adds ImageRadioGroup component

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,60 @@
   <body>
     <div id="content"></div>
     <script type="text/jsx">
+      var ImageRadioGroup = React.createClass({
+        getInitialState: function() {
+          return { defaultValue: this.props.defaultValue };
+        },
+        componentDidMount: function() { this.setCheckedRadio(); },
+        componentDidUpdate: function() { this.setCheckedRadio(); },
+        getRadios: function () {
+          return this.getDOMNode().querySelectorAll('input[type="radio"]');
+        },
+        setCheckedRadio: function() {
+          var $radios = this.getRadios();
+
+          var destinationValue = this.props.value != null
+            ? this.props.value
+            : this.state.defaultValue;
+
+          for (var i = 0, length = $radios.length; i < length; i++) {
+            var $radio = $radios[i];
+            if ($radio.value == destinationValue) {
+              $radio.checked = true;
+            }
+          }
+        },
+        getCheckedValue: function() {
+          var $radios = this.getRadios();
+          for (var i = 0, length = $radios.length; i < length; i++) {
+            if ($radios[i].checked) {
+              return $radios[i].value;
+            }
+          }
+          return null;
+        },
+        render: function () {
+          var inputNodes = this.props.options.map(function (option) {
+            return (
+              <label>
+                <span>{option.name}</span>
+                <input
+                  type="radio"
+                  name={this.props.name}
+                  value={option.value}
+                  onChange={this.props.onChange} />
+                <br />
+              </label>
+            );
+          }.bind(this));
+          return (
+            <div>
+              {{inputNodes}}
+            </div>
+          );
+        }
+      });
+
       var DiveApp = React.createClass({
         handleDiveChange: function (dive) {
           this.setState({dive: dive});
@@ -16,7 +70,9 @@
             dive: {
               maxDepth: 0,
               surfaceTemp: 0,
-              bottomTemp: 0
+              bottomTemp: 0,
+              weather: 0,
+              divemode: 0
             }
           }
         },
@@ -31,12 +87,35 @@
       });
 
       var DiveForm = React.createClass({
+        getInitialState: function () {
+          return {
+            selectedWeather: 0,
+            weatherOptions: [
+              { value: 0, name: 'Not set' },
+              { value: 1, name: 'Partly Cloudy' },
+              { value: 2, name: 'Sunny' },
+              { value: 3, name: 'Cloudy' },
+              { value: 4, name: 'Light Rain' },
+              { value: 5, name: 'Heavy Rain' },
+              { value: 6, name: 'Snowfall' },
+              { value: 7, name: 'Dark' },
+              { value: 8, name: 'Indoor' },
+            ],
+            divemodeOptions: [
+              { value: 0, name: 'Air' },
+              { value: 1, name: 'EAN' },
+              { value: 2, name: 'Gauge' },
+              { value: 3, name: 'Free' },
+            ]
+          }
+        },
         handleChange: function (e) {
-          e.preventDefault();
           this.props.onDiveChange({
             maxDepth: React.findDOMNode(this.refs.maxDepth).value.trim(),
             surfaceTemp: React.findDOMNode(this.refs.surfaceTemp).value.trim(),
-            bottomTemp: React.findDOMNode(this.refs.bottomTemp).value.trim()
+            bottomTemp: React.findDOMNode(this.refs.bottomTemp).value.trim(),
+            weather: this.refs.weather.getCheckedValue(),
+            divemode: this.refs.divemode.getCheckedValue()
           });
         },
         render: function () {
@@ -54,6 +133,18 @@
                 Bottom Temperature
                 <input type="number" ref="bottomTemp" value={this.props.dive.bottomTemp} onChange={this.handleChange} />
               </label>
+              <ImageRadioGroup
+                name="weather"
+                ref="weather"
+                value={this.props.dive.weather}
+                options={this.state.weatherOptions}
+                onChange={this.handleChange} />
+              <ImageRadioGroup
+                name="divemode"
+                ref="divemode"
+                value={this.props.dive.divemode}
+                options={this.state.divemodeOptions}
+                onChange={this.handleChange} />
             </form>
           );
         }
@@ -68,6 +159,8 @@
                 +'  <StartTemperature>' + dive.surfaceTemp + '</StartTemperature>\r\n'
                 +'  <BottomTemperature>' + dive.bottomTemp + '</BottomTemperature>\r\n'
                 +'  <EndTemperature>' + dive.surfaceTemp + '</EndTemperature>\r\n'
+                +'  <Weather>' + dive.weather + '</Weahter>\r\n'
+                +'  <Mode>' + dive.divemode + '</Mode>\r\n'
                 +'</Dive>';
         },
         render: function () {
