--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,179 +6,12 @@
   </head>
   <body>
     <div id="content"></div>
+    <script type="text/jsx" src="js/divexml.js"></script>
+    <script type="text/jsx" src="js/diveform.js"></script>
+    <script type="text/jsx" src="js/diveapp.js"></script>
+    <script type="text/jsx" src="js/imageradiogroup.js"></script>
     <script type="text/jsx">
-      var ImageRadioGroup = React.createClass({
-        getInitialState: function() {
-          return { defaultValue: this.props.defaultValue };
-        },
-        componentDidMount: function() { this.setCheckedRadio(); },
-        componentDidUpdate: function() { this.setCheckedRadio(); },
-        getRadios: function () {
-          return this.getDOMNode().querySelectorAll('input[type="radio"]');
-        },
-        setCheckedRadio: function() {
-          var $radios = this.getRadios();
-
-          var destinationValue = this.props.value != null
-            ? this.props.value
-            : this.state.defaultValue;
-
-          for (var i = 0, length = $radios.length; i < length; i++) {
-            var $radio = $radios[i];
-            if ($radio.value == destinationValue) {
-              $radio.checked = true;
-            }
-          }
-        },
-        getCheckedValue: function() {
-          var $radios = this.getRadios();
-          for (var i = 0, length = $radios.length; i < length; i++) {
-            if ($radios[i].checked) {
-              return $radios[i].value;
-            }
-          }
-          return null;
-        },
-        render: function () {
-          var inputNodes = this.props.options.map(function (option) {
-            return (
-              <label>
-                <span>{option.name}</span>
-                <input
-                  type="radio"
-                  name={this.props.name}
-                  value={option.value}
-                  onChange={this.props.onChange} />
-                <br />
-              </label>
-            );
-          }.bind(this));
-          return (
-            <div>
-              {{inputNodes}}
-            </div>
-          );
-        }
-      });
-
-      var DiveApp = React.createClass({
-        handleDiveChange: function (dive) {
-          this.setState({dive: dive});
-        },
-        getInitialState: function () {
-          return {
-            dive: {
-              maxDepth: 0,
-              surfaceTemp: 0,
-              bottomTemp: 0,
-              weather: 0,
-              divemode: 0
-            }
-          }
-        },
-        render: function () {
-          return (
-            <section>
-              <DiveForm dive={this.state.dive} onDiveChange={this.handleDiveChange} />
-              <DiveXml dive={this.state.dive} />
-            </section>
-          );
-        }
-      });
-
-      var DiveForm = React.createClass({
-        getInitialState: function () {
-          return {
-            selectedWeather: 0,
-            weatherOptions: [
-              { value: 0, name: 'Not set' },
-              { value: 1, name: 'Partly Cloudy' },
-              { value: 2, name: 'Sunny' },
-              { value: 3, name: 'Cloudy' },
-              { value: 4, name: 'Light Rain' },
-              { value: 5, name: 'Heavy Rain' },
-              { value: 6, name: 'Snowfall' },
-              { value: 7, name: 'Dark' },
-              { value: 8, name: 'Indoor' },
-            ],
-            divemodeOptions: [
-              { value: 0, name: 'Air' },
-              { value: 1, name: 'EAN' },
-              { value: 2, name: 'Gauge' },
-              { value: 3, name: 'Free' },
-            ]
-          }
-        },
-        handleChange: function (e) {
-          this.props.onDiveChange({
-            maxDepth: React.findDOMNode(this.refs.maxDepth).value.trim(),
-            surfaceTemp: React.findDOMNode(this.refs.surfaceTemp).value.trim(),
-            bottomTemp: React.findDOMNode(this.refs.bottomTemp).value.trim(),
-            weather: this.refs.weather.getCheckedValue(),
-            divemode: this.refs.divemode.getCheckedValue()
-          });
-        },
-        render: function () {
-          return (
-            <form>
-              <label>
-                Max Depth
-                <input type="number" ref="maxDepth" value={this.props.dive.maxDepth} onChange={this.handleChange} />
-              </label>
-              <label>
-                Surface Temperature
-                <input type="number" ref="surfaceTemp" value={this.props.dive.surfaceTemp}  onChange={this.handleChange} />
-              </label>
-              <label>
-                Bottom Temperature
-                <input type="number" ref="bottomTemp" value={this.props.dive.bottomTemp} onChange={this.handleChange} />
-              </label>
-              <ImageRadioGroup
-                name="weather"
-                ref="weather"
-                value={this.props.dive.weather}
-                options={this.state.weatherOptions}
-                onChange={this.handleChange} />
-              <ImageRadioGroup
-                name="divemode"
-                ref="divemode"
-                value={this.props.dive.divemode}
-                options={this.state.divemodeOptions}
-                onChange={this.handleChange} />
-            </form>
-          );
-        }
-      });
-
-      var DiveXml = React.createClass({
-        generateXml: function (dive) {
-          return '<Dive \r\n'
-                +'  xmlns:i="http://www.w3.org/2001/XMLSchema-instance"\r\n'
-                +'  xmlns="http://schemas.datacontract.org/2004/07/Suunto.Diving.Dal">\r\n'
-                +'  <MaxDepth>' + dive.maxDepth + '</MaxDepth>\r\n'
-                +'  <StartTemperature>' + dive.surfaceTemp + '</StartTemperature>\r\n'
-                +'  <BottomTemperature>' + dive.bottomTemp + '</BottomTemperature>\r\n'
-                +'  <EndTemperature>' + dive.surfaceTemp + '</EndTemperature>\r\n'
-                +'  <Weather>' + dive.weather + '</Weahter>\r\n'
-                +'  <Mode>' + dive.divemode + '</Mode>\r\n'
-                +'</Dive>';
-        },
-        render: function () {
-          var xml = this.generateXml(this.props.dive);
-          return (
-            <section>
-              <pre>
-                {xml}
-              </pre>
-            </section>
-          );
-        }
-      });
-
-      React.render(
-        <DiveApp />,
-        document.getElementById('content')
-      );
+      React.render(<DiveApp />, document.getElementById('content'));
     </script>
   </body>
 </html>
