--- a/src/index.html
+++ b/src/index.html
@@ -110,6 +110,8 @@
 
       <button ng-click="save()" class="action">Save Changes</button>
     </section>
+    <script src="node_modules/react/dist/JSXTransformer.js"></script>
+    <script src="node_modules/react/dist/react.js"></script>
     <script src="node_modules/angular/angular.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
